@@ -256,6 +256,7 @@ void imap_free_header_data (void** data);
 int imap_read_headers (IMAP_DATA* idata, int msgbegin, int msgend);
 char* imap_set_flags (IMAP_DATA* idata, HEADER* h, char* s);
 int imap_cache_del (IMAP_DATA* idata, HEADER* h);
+int imap_cache_clean (IMAP_DATA* idata);
 
 /* util.c */
 #ifdef USE_HCACHE
